k8s/app/base/deployment-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-kn000131
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: todo-app-kn000131
        image: peterpisut/todo-app
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
      dnsPolicy: ClusterFirst
