k8s/app/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-kn000131
spec:
  type: ClusterIP
  selector:
    app: todo-app-kn000131
  ports:
  - port: 3000
    targetPort: 3000
    name: http
