k8s/app/base/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-app-kn000131
spec:
  host: $(DEPLOYMENT_CONFIG_NAME).$(NAMESPACE).apps.$(LABEL_CLUSTER).kasikornbank.com.172.30.183.115.nip.io
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: todo-app-kn000131
    weight: 100
